# document-generation-service

./: .gitignore  Cargo.toml  Dockerfile  README.md  deploy.sh
docs/: document-generation-service.txt
kubernetes/: deployment.yaml
src/: config.rs  error.rs  gcs.rs  main.rs  models.rs  persistence.rs  pipeline.rs
src/generators/: ieee830.rs  iso29148_conops.rs  iso29148_srs.rs  iso29148_stakrs.rs  iso29148_syrs.rs  mod.rs  security_report.rs
src/pubsub/: handler.rs  mod.rs  publisher.rs
src/renderers/: html.rs  markdown.rs  mod.rs  pdf.rs
templates/: ieee830_srs.md.hbs  iso29148_conops.md.hbs  iso29148_srs.md.hbs  iso29148_stakrs.md.hbs  iso29148_syrs.md.hbs  security_report.md.hbs
