[package]
name = "document-generation-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
config = "0.13"
anyhow = "1"
thiserror = "1"
handlebars = "4"
base64 = "0.21"
tempfile = "3"
async-trait = "0.1"
futures = "0.3"

# Google Cloud Pub/Sub
google-cloud-pubsub = "0.25"
google-cloud-googleapis = { version = "0.13.0", features = ["pubsub"] }
google-cloud-gax = "0.17"
tokio-util = "0.7"

# --- Database ---
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "bigdecimal"] }

# --- GCS ---
google-cloud-storage = "0.18"

# --- Checksums ---
sha2 = "0.10"
hex = "0.4"
